--- a/learning.vcxproj
+++ b/learning.vcxproj
@@ -70,12 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\target</OutDir>
-    <IntDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\obj</IntDir>
+    <OutDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\target\</OutDir>
+    <IntDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\target</OutDir>
-    <IntDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\obj</IntDir>
+    <OutDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\target\</OutDir>
+    <IntDir>$(ProjectDir)build\$(ProjectName)\$(Platform)\$(Configuration)\obj\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
